<resources>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="address_data_loading">Loading…</string>
    <string name="i18n_country_label">Country</string>
    <string name="i18n_locality_label">City</string>
    <string name="i18n_dependent_locality_label">District</string>
    <string name="i18n_organization_label">Company</string>
    <string name="i18n_recipient_label">Contact name</string>
    <string name="i18n_address_line1_label">Street address</string>
    <string name="i18n_postal_code_label">Postal code</string>
    <string name="i18n_zip_code_label">ZIP code</string>
    <string name="i18n_area">Area</string>
    <string name="i18n_county_label">County</string>
    <string name="i18n_department">Department</string>
    <string name="i18n_do_si">Do</string>
    <string name="i18n_emirate">Emirate</string>
    <string name="i18n_island">Island</string>
    <string name="i18n_parish">Parish</string>
    <string name="i18n_prefecture">Prefecture</string>
    <string name="i18n_province">Province</string>
    <string name="i18n_state_label">State</string>
    <string name="i18n_missing_required_field">Required</string>
    <string name="invalid_entry">Invalid entry</string>
    <string name="invalid_locality_label">Invalid city</string>
    <string name="invalid_dependent_locality_label">Invalid district</string>
    <string name="invalid_postal_code_label">Invalid postal code</string>
    <string name="invalid_zip_code_label">Invalid ZIP code</string>
    <string name="invalid_area">Invalid area</string>
    <string name="invalid_county_label">Invalid county</string>
    <string name="invalid_department">Invalid department</string>
    <string name="invalid_do_si">Invalid do</string>
    <string name="invalid_emirate">Invalid emirate</string>
    <string name="invalid_island">Invalid island</string>
    <string name="invalid_parish">Invalid parish</string>
    <string name="invalid_prefecture">Invalid prefecture</string>
    <string name="invalid_province">Invalid province</string>
    <string name="invalid_state_label">Invalid state</string>
    <string name="enter_credit_card">Enter details about the credit card you want to use with Google Wallet.</string>
    <string name="setup_wizard_market_setup_title">Entertainment</string>
    <string name="setup_wizard_market_setup_fake_offer_description">Shop for all your favorite apps, games, and more on Google Play.</string>
    <string name="set_up_credit_card">Set up credit card</string>
    <string name="not_now">Not now</string>
    <string name="add_carrier_billing_introduction">You can bill purchases directly to your %1$s account.</string>
    <string name="password_protect_on">Your purchases are password protected.</string>
    <string name="password_protect_off">Go to Play store settings to enable password protection for added security.</string>
    <string name="google_wallet_description_password_protect_on">Purchasing is fast, easy, and safe because your credit card is saved with Google Wallet. Your purchases are password protected.</string>
    <string name="google_wallet_description_password_protect_off">Purchasing is fast, easy, and safe because your credit card is saved with Google Wallet. Go to Play store settings to enable password protection for added security.</string>
    <string name="by_wallet">Secured by &lt;img src=wallet_logo/></string>
    <string name="card_number">Card number</string>
    <string name="hint_expiration_month">MM</string>
    <string name="hint_expiration_year">YY</string>
    <string name="name_expiration_month">Month</string>
    <string name="name_expiration_year">Year</string>
    <string name="expiration_date_separator">/</string>
    <string name="cvc_code">CVC</string>
    <string name="cvc_code_popup_visa_description"><b>Discover, MasterCard, Visa, and Visa Electron</b>"
The CVC is the last three digits of the number that appears on the back of your card in the signature bar."</string>
    <string name="cvc_code_popup_amex_description"><b>American Express</b>"
The CVC is the four digits located on the front of the card, on the right side."</string>
    <string name="name_on_card">Cardholder name</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">E-mail address</string>
    <string name="addcreditcard_privacy_footer">Adding a credit card will create a Google Wallet account for you. <u>Privacy Policy</u>.</string>
    <string name="select_location">Select location</string>
    <string name="add_credit_card">Add card</string>
    <string name="add_credit_card_title">Enter credit card</string>
    <string name="add_instrument_continue">Continue</string>
    <string name="invalid_credit_card_number">Invalid credit card number</string>
    <string name="invalid_expiration_month">Invalid month</string>
    <string name="invalid_expiration_year">Invalid year</string>
    <string name="invalid_cvc">Invalid CVC</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_city">Invalid city</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="save">Save</string>
    <string name="saving">Saving…</string>
    <string name="enter_your_address_sentence">Please enter your billing address to be stored in your Google account.</string>
    <string name="name_label">Name</string>
    <string name="carrier_tos_and_address_title">%1$s Billing Agreement</string>
    <string name="tos_locale_replacement" />
    <string name="billing_information_snippet_description">Your billing address will be stored in your Google account:</string>
    <string name="billing_information_description">The following billing address will be stored in your Google account.</string>
    <string name="verify_pin_title">Verifying Account</string>
    <string name="verify_pin_description">Please wait while your account verification is in progress.</string>
    <string name="buypage_errors">There were errors in the information you provided.</string>
    <string name="bill_my_phone_account">Bill my %1$s account</string>
    <string name="dcb_setup_title">%1$s billing</string>
    <string name="dcb_setup_title_generic">Carrier billing</string>
    <string name="dcb_tos_acceptance_footer_html">By tapping \"%1$s\", you agree to the &lt;a href=%2$s>%3$s Terms of Service&lt;/a>.</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="enter_your_password_title">Enter your password</string>
    <string name="cancel">Cancel</string>
    <string name="uninstall">Uninstall</string>
    <string name="update">Update</string>
    <string name="sample">Free sample</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="content_description_main_icon">Go up</string>
    <string name="content_description_search">Search</string>
    <string name="content_description_share">Share</string>
    <string name="content_description_wishlist_add">Include in wishlist</string>
    <string name="change_password_restrict_label">Password</string>
    <string name="change_password_restrict_summary">Use password to restrict purchases</string>
    <string name="os_licenses_label">Open source licenses</string>
    <string name="os_licenses_summary">License details for open source software</string>
    <string name="content_filtering_label">Content filtering</string>
    <string name="settings_general_section_header">General</string>
    <string name="settings_user_controls_section_header">User controls</string>
    <string name="settings_about_header">About</string>
    <string name="settings_build_version">Build version</string>
    <string name="notifications">Notifications</string>
    <string name="notification_description">Notify me about updates to apps or games that I downloaded</string>
    <string name="auto_update_label">Auto-update apps</string>
    <string name="auto_add_shortcuts_label">Auto-add shortcuts</string>
    <string name="auto_add_shortcuts_description">Automatically add Home screen shortcuts for new apps</string>
    <string name="clear_history_title">Clear search history</string>
    <string name="clear_history_summary">Remove all the searches you have performed</string>
    <string name="content_filtering_description">Set the content filtering level to restrict apps that can be downloaded</string>
    <string name="warm_welcome_own_profile_title">Welcome</string>
    <string name="warm_welcome_own_profile_body">Your shared Google Play activity, like reviews and +1s, is shown here. Rate the apps and content you love to share your recommendations with the world!</string>
    <string name="warm_welcome_own_profile_got_it">Got it</string>
</resources>