<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:finsky="http://schemas.android.com/apk/res/com.android.vending">
    <com.google.android.play.layout.PlayActionButton android:id="@id/buy_button" android:visibility="gone" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.play.layout.PlayActionButton android:id="@id/buy_button2" android:visibility="gone" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.play.layout.PlayActionButton android:id="@id/try_button" android:visibility="gone" android:text="@string/sample" finsky:ignore_corpus_color="true" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.play.layout.PlayActionButton android:id="@id/launch_button" android:visibility="gone" android:text="@string/open" finsky:ignore_corpus_color="true" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.play.layout.PlayActionButton android:id="@id/update_button" android:visibility="gone" android:text="@string/update" finsky:ignore_corpus_color="true" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.play.layout.PlayActionButton android:id="@id/uninstall_button" android:visibility="gone" android:text="@string/uninstall" finsky:ignore_corpus_color="true" style="@style/Play_DetailsPage_ActionButton" />
    <com.google.android.play.layout.PlayActionButton android:id="@id/download_button" android:visibility="gone" android:text="@string/download" finsky:ignore_corpus_color="true" style="@style/Play_DetailsPage_ActionButton" />
</merge>