<?xml version="1.0" encoding="utf-8"?>
<com.google.android.finsky.layout.LegacyActionBar android:orientation="horizontal" android:id="@id/action_bar" android:background="@drawable/action_bar_bg_home" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/action_bar_up_pack" android:background="@drawable/highlight_overlay_dark" android:focusable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/content_description_main_icon">
        <ImageView android:layout_gravity="start|center" android:id="@id/action_bar_chevron_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_ab_back" />
        <ImageView android:layout_gravity="center" android:id="@id/action_bar_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="-4.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:src="@mipmap/ic_menu_play_store" android:scaleType="fitCenter" android:adjustViewBounds="true" />
    </LinearLayout>
    <TextView android:textSize="@dimen/action_bar_font_size" android:textColor="@color/white" android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/breadcrumb" android:paddingLeft="5.0dip" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:singleLine="true" android:layout_weight="1.0" />
    <com.google.android.finsky.layout.LegacyActionBarButton android:id="@id/wishlist_button" android:background="@drawable/highlight_overlay_dark" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_menu_wish_off_dark" android:contentDescription="@string/content_description_wishlist_add" />
    <com.google.android.finsky.layout.LegacyActionBarButton android:id="@id/share_button" android:background="@drawable/highlight_overlay_dark" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_menu_share_holo_dark" android:contentDescription="@string/content_description_share" />
    <com.google.android.finsky.layout.LegacyActionBarButton android:id="@id/search_button" android:background="@drawable/highlight_overlay_dark" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_menu_search_holo_dark" android:contentDescription="@string/content_description_search" />
</com.google.android.finsky.layout.LegacyActionBar>