<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/addcreditcard_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" />
    <View android:id="@id/header_space" android:layout_width="fill_parent" android:layout_height="8.0dip" android:layout_below="@id/addcreditcard_header" />
    <ImageView android:id="@id/visa_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/credit_card_logos_left_margin" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_visa" android:layout_below="@id/header_space" />
    <ImageView android:id="@id/mastercard_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_master" android:layout_toRightOf="@id/visa_logo" android:layout_below="@id/header_space" />
    <ImageView android:id="@id/amex_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_amex" android:layout_toRightOf="@id/mastercard_logo" android:layout_below="@id/header_space" />
    <ImageView android:id="@id/discover_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_discover" android:layout_toRightOf="@id/amex_logo" android:layout_below="@id/header_space" />
    <ImageView android:id="@id/jcb_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_jcb" android:layout_toRightOf="@id/discover_logo" android:layout_below="@id/header_space" />
    <ImageView android:id="@id/general_logo" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_general" android:layout_below="@id/header_space" />
    <com.google.android.finsky.layout.CreditCardNumberEditText android:id="@id/cc_box" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/card_number" android:singleLine="true" android:layout_below="@id/visa_logo" android:layerType="hardware" style="@android:style/Widget.EditText" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/cc_box_concealed" android:paddingLeft="12.0dip" android:paddingTop="6.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/credit_card_number_collapsed_left_padding" android:freezesText="true" android:layout_alignBaseline="@id/cc_box" android:layerType="hardware" />
    <EditText android:id="@id/expiration_date_entry_1st" android:visibility="invisible" android:nextFocusUp="@id/cc_box" android:nextFocusDown="@id/expiration_date_entry_2nd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/hint_expiration_month" android:ems="3" android:singleLine="true" android:maxLength="2" android:layout_below="@id/cc_box" android:inputType="number" android:layerType="hardware" />
    <TextView android:id="@id/expiration_date_separator" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/expiration_date_separator" android:layout_toRightOf="@id/expiration_date_entry_1st" android:layout_alignBaseline="@id/expiration_date_entry_1st" android:layerType="hardware" />
    <EditText android:id="@id/expiration_date_entry_2nd" android:visibility="invisible" android:nextFocusUp="@id/expiration_date_entry_1st" android:nextFocusDown="@id/cvc_entry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/hint_expiration_year" android:ems="3" android:singleLine="true" android:maxLength="2" android:layout_toRightOf="@id/expiration_date_separator" android:layout_alignBaseline="@id/expiration_date_entry_1st" android:inputType="number" android:layerType="hardware" />
    <EditText android:id="@id/cvc_entry" android:visibility="invisible" android:nextFocusUp="@id/expiration_date_entry_2nd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/cvc_code" android:ems="4" android:singleLine="true" android:layout_alignBaseline="@id/expiration_date_entry_1st" android:layout_alignRight="@id/cc_box" android:inputType="number" android:layerType="hardware" />
    <ImageView android:id="@id/cvc_image" android:background="@drawable/highlight_overlay_light" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cvc_hint" android:layout_toLeftOf="@id/cvc_entry" android:layout_alignTop="@id/expiration_date_entry_1st" android:layout_alignBottom="@id/expiration_date_entry_1st" android:layerType="hardware" />
    <ImageButton android:id="@id/edit_number_button" android:background="@drawable/highlight_overlay_light" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_more_arrow_down_dark" android:layout_alignTop="@id/cc_box" android:layout_alignParentRight="true" android:layerType="hardware" />
    <com.google.android.finsky.layout.BillingAddress android:orientation="vertical" android:id="@id/billing_address" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/expiration_date_entry_1st" android:layerType="hardware" />
    <TextView android:id="@id/billing_addcreditcard_privacy_footer" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/addcreditcard_privacy_footer" android:layout_below="@id/billing_address" />
</merge>